# aoc2022

./: CMakeLists.txt  common.h  day01.cpp  day02.cpp  day03.cpp  day04.cpp  day05.cpp  day06.cpp  day07.cpp  day08.cpp  day09.cpp  day10.cpp  day11.cpp  day12.cpp  day13.cpp  day14.cpp  day15.cpp  day17.cpp  main.cpp  test.cpp  tinyexpr.c
